# UniSpecRec

./: .gitignore  pyproject.toml
.claude/: settings.local.json
goodscripts/: Singular_Value_Distribution.ipynb  Spectral_Alignment_Score.ipynb  cumulative.ipynb  study_of_filter.ipynb  unispecrec_sgfcf_grid_search.ipynb
goodscripts/final/: AlphaRec.py  EASE.py  L3AE.py  LightGCN.py  MF.py  RLMRecCon.py  RLMRecGen.py  SGFCF.py  SimGCL.py  UniSpecRec(LightGCN).py  UniSpecRec(MF).py  UniSpecRec(SGFCF).py
models/: AlignMF.py  AlignSimGCL.py  AlphaRec.py  EASE.py  L3AE.py  LightGCN.py  MF.py  RLMRec-Con.py  RLMRec-Gen.py  SGFCF.py  SimGCL.py  UniSpecRec.py  __init__.py  base.py
scripts/: AlphaRec.py  LightGCN.ipynb  LightGCN.py  MF.ipynb  MF_grid_search.ipynb  UniSpecRec(LightGCN).ipynb  ss.py  uni_grid_search.py  unispec_grid_search.ipynb  user嵌入和item嵌入的关系.ipynb
utils/: __init__.py  datahandler.py  grid_search.py  loss.py  metric.py  plot.py  trainer.py  utils.py
